--- a/scss/Components/input_radio.scss
+++ b/scss/Components/input_radio.scss
@@ -70,7 +70,7 @@ $color2: #E03348;
 .radio-label {
     display: flex;
     flex-flow: row-reverse;
-    text-align: left;
+    text-align: right;
     font-size: 18px;
     font-family: 'Arial GEO';
 }
