--- a/scss/pages/footer.scss
+++ b/scss/pages/footer.scss
@@ -5,6 +5,10 @@
     font-family: $bpg-nino-mtavruli;
     color: #768A92;
     font-weight: bold;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 
     .social__icons {
         img {
