--- a/scss/pages/add_word.scss
+++ b/scss/pages/add_word.scss
@@ -94,6 +94,7 @@
                 span {
                     display: inline-block;
                     vertical-align: middle;
+                    color: #546D78;
     
                     &:nth-child(2){
                         width: 5px;
@@ -157,6 +158,7 @@
             padding: 5px 14px;
             border-radius: 8px;
             display: inline-block;
+            color: #546D78;
         }
 
 
