--- a/scss/pages/header.scss
+++ b/scss/pages/header.scss
@@ -43,6 +43,17 @@
         display: flex;
         align-items: center;
 
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: -9px;
+            left: 0;
+            right: 0;
+            height: 15px;
+            background: transparent;
+        }
+
+
         .header__dropdown {
             position: absolute;
             right: 0;
@@ -50,6 +61,7 @@
             background: #FDFDFD;
             border-radius: 12px;
             padding: 20px 34px;
+            z-index: 10;
             box-shadow: 0px 0px 10px 0px rgba(85, 110, 121, 0.33);
             display: none;
 
@@ -91,6 +103,7 @@
             font-size: 18px;
             color: #fff;
             margin-right: 10px;
+            padding-top: 4px;
 
         }
     }
