--- a/scss/pages/header.scss
+++ b/scss/pages/header.scss
@@ -78,6 +78,7 @@
                font-size: 15px;
                display: block;
                text-align: center;
+               white-space: nowrap;
                font-family: $bpg-nino-mtavruli;
             }
         }
