--- a/scss/Components/popup.scss
+++ b/scss/Components/popup.scss
@@ -22,7 +22,7 @@
         transform: translate(-50%, -50%);
         background: #fff;
         border-radius: 12px;
-        padding: 58px 20px 20px 20px;
+        padding: 55px 57px 20px 35px;
 
         &__title {
             .popup__title-child {
@@ -51,8 +51,7 @@
 
 
     .myform {
-        padding-right: 37px;
-        margin-top: 57px;
+        margin-top: 65px;
         display: none;
 
         &.active {
@@ -92,13 +91,14 @@
         label {
             margin-right: 34px;
             width: 18%;
+            color: #546D78;
             text-align: right;
             font-family: $arial-geo;
         }
 
         .popup__bottom {
             padding-left: 100px;
-            margin-top: 48px;
+            margin-top: 40px;
 
             a {
                 color: #546D78;
@@ -109,16 +109,20 @@
 
     .register__form {
         label {
-            width: 64%;
-            margin-right: 18px;
+            width: 67%;
+            margin-right: 17px;
             white-space: nowrap;
+        }
+
+        .btn-danger {
+            padding: 7px 17px;
+            padding-top: 10px;
         }
     }
 
     .second__form {
-        padding-right: 70px;
-        margin-top: 38px;
-        margin-bottom: 21px;
+        padding-right: 30px;
+        margin-top: 30px;
 
         .form-control {
             padding-left: 9px;
@@ -126,7 +130,7 @@
     }
 
     .reset__popup {
-        padding-bottom: 80px;
+        padding: 54px 63px 30px 63px;
 
         .popup__title-child {
             color: $color-red;
@@ -134,6 +138,11 @@
 
         .form-control {
             width: 280px;
+        }
+
+        .btn-danger {
+            padding: 5px 17px;
+            padding-top: 8px;
         }
 
         label {
@@ -148,7 +157,7 @@
 
         &-p {
             font-family: $arial-geo;
-            margin-top: 60px;
+            margin-top: 54px;
             margin-bottom: 30px;
             text-align: left;
             line-height: 24px;
