--- a/scss/pages/add_word.scss
+++ b/scss/pages/add_word.scss
@@ -76,8 +76,12 @@
         padding: 12px 16px 23px 26px;
         margin-bottom: 11px;
 
-        &-title {
+        &:hover .correct__word-title {
             color: $color-red;
+        }
+
+        &-title {
+            color: $color-gray-secondary;
             font-family: $arial-geo;
             font-size: 16px;
             line-height: 1.8;
@@ -89,7 +93,11 @@
             padding-bottom: 7px;
 
             .share__on__fb {
-                box-shadow: 0px 0px 10px 0px rgba(199, 71, 71, 0.3);
+                box-shadow: 0px 0px 10px 0px rgba(84,109,120,0.3);
+
+                &:hover {
+                    box-shadow: 0px 0px 10px 0px rgba(199,71,71,0.3);
+                }
 
                 span {
                     display: inline-block;
@@ -146,6 +154,10 @@
                 font-family: $arial-geo;
                 box-shadow: 0px 0px 10px 0px rgba(84,109,120,0.3);
 
+                &:hover {
+                    box-shadow: 0px 0px 10px 0px rgba(199,71,71,0.3);
+                }
+
                 span {
                     display: inline-block;
                     vertical-align: middle;
@@ -171,6 +183,7 @@
 
         .word__filter {
             text-align: center;
+            color: $color-gray-secondary;
             line-height: 50px;
             cursor: pointer;
 
