--- a/scss/pages/footer.scss
+++ b/scss/pages/footer.scss
@@ -3,7 +3,7 @@
     margin-top: 50px;
     box-shadow: 0px -2px 10px 0px rgba(85,110,121,0.16);
     font-family: $bpg-nino-mtavruli;
-    color: #768A92;
+    color: $color-gray-secondary;
     font-weight: bold;
     position: absolute;
     bottom: 0;
