--- a/scss/Components/input_radio.scss
+++ b/scss/Components/input_radio.scss
@@ -7,11 +7,12 @@ $color2: #E03348;
 }
 
 .radio {
-  padding: 0px 20px 37px 10px;
+  padding: 0px 20px 30px 10px;
   
   input[type="radio"] {
     position: absolute;
     opacity: 0;
+
     + .radio-label {
       &:before {
         content: '';
@@ -20,12 +21,11 @@ $color2: #E03348;
         display: inline-block;
         width: 18px;
         height: 18px;
-        top: 5px;
+        top: 0px;
         position: relative;
         margin-left: 23px; 
         vertical-align: top;
         cursor: pointer;
-        text-align: center;
         flex-shrink: 0;
       }
     }
@@ -71,7 +71,10 @@ $color2: #E03348;
 .radio-label {
     display: flex;
     flex-flow: row-reverse;
-    text-align: right;
-    font-size: 18px;
-    font-family: 'Arial GEO';
+    justify-content: space-between;
+    align-items: center;
+    text-align: left;
+    font-size: 15px;
+    line-height: 1.2;
+    font-family: $bpg-nino-mtavruli;
 }
