--- a/scss/pages/pages--import.scss
+++ b/scss/pages/pages--import.scss
@@ -1,3 +1,4 @@
 @import 'header.scss';
 @import 'footer.scss';
-@import 'add_word.scss';
+@import './main-page/search_word.scss';
+@import './addword/add-word.scss';
