--- a/scss/pages/main-page/search_word.scss
+++ b/scss/pages/main-page/search_word.scss
@@ -73,7 +73,7 @@
     .correct__word {
         border-radius: 12px;
         box-shadow: 0px 0px 10px 0px rgba(84,109,120,0.3);
-        padding: 12px 16px 23px 26px;
+        padding: 12px 16px 6px 26px;
         margin-bottom: 11px;
 
         &:hover .correct__word-title {
@@ -89,7 +89,7 @@
 
         &-top {
             @include flex($justify: space-between, $align: flex-start);
-            border-bottom: 1px solid rgba(84, 109, 120, 0.3);
+            border-bottom: 1px solid rgba(84, 109, 120, 0.5);
             padding-bottom: 7px;
 
             .share__on__fb {
@@ -115,21 +115,10 @@
         &-middle {
             margin-top: 11px;
             margin-bottom: 22px;
+            padding-left: 25px;
 
             .correct--word {
                 margin-bottom: 5px;
-
-                &-num {
-                    border: 1px solid $color-red;
-                    border-radius: 8px;
-                    display: inline-block;
-                    font-size: 13px;
-                    width: 26px;
-                    height: 18px;
-                    line-height: 18px;
-                    text-align: center;
-                    margin-right: 10px;
-                }
 
                 &-text {
                     font-size: 14px;
@@ -144,23 +133,23 @@
 
             .correct--main-word  {
                 margin-bottom: 15px;
+                padding-bottom: 15px;
+                border-bottom: 1px solid rgba(84, 109, 120, 0.5);
             }
         }
 
         &-bottom {
             @include flex($justify: space-between);
 
-            .word__button {
-                font-family: $arial-geo;
-                box-shadow: 0px 0px 10px 0px rgba(84,109,120,0.3);
+            .user__who__added {
+                display: flex;
+                align-items: center;
+                color: #546D78;
+                font-family: $bpg-nino-mtavruli;
 
-                &:hover {
-                    box-shadow: 0px 0px 10px 0px rgba(199,71,71,0.3);
-                }
-
-                span {
-                    display: inline-block;
-                    vertical-align: middle;
+                img {
+                    width: 23px;
+                    margin-bottom: 4px;
                 }
             }
         }
@@ -174,7 +163,17 @@
         }
 
 
-
+        &-number {
+            width: 28px;
+            height: 28px;
+            border-radius: 50%;
+            color: #fff;
+            text-align: center;
+            line-height: 28px;
+            font-size: 13px;
+            background: $color-red-secondary;
+            font-family: $arial-geo;
+        }
     }
 
     // right
