--- a/scss/pages/addword/add-word.scss
+++ b/scss/pages/addword/add-word.scss
@@ -12,19 +12,19 @@
         font-family: $arial-geo;
 
         img {
-            margin-top: 5px;
-            margin-left: 10px;
+            margin-top: 4px;
+            margin-left: 6px;
         }
     }
 
     .level-1 {
-        .example__btn {
+        .level__btn {
             margin-top: 60px;
         }
     }
 
 
-    .example {
+    .level {
         &__input {
             border: 1px solid rgba(85, 110, 121, 0.3);
             border-radius: 10px;
@@ -32,6 +32,7 @@
             margin-top: 15px;
             padding: 7px;
             color: #546D78;
+            font-family: $arial-geo;
         }
 
         &__btn {
@@ -40,6 +41,83 @@
             border-radius: 12px;
             display: block;
             margin: 0 auto;
+        }
+    }
+
+    .level-2 {
+        .level__input {
+            padding-left: 22px;
+        }
+    }
+
+
+    .completed__level {
+        border-radius: 10px;
+        overflow: hidden;
+        border-left: 9px solid #DD6D7A;
+        background: rgba(222, 222, 222, 0.3);
+        padding: 5px 7px 5px 11px;
+        margin-top: 10px;
+        @include flex($justify: space-between, $align: center);
+        font-family: $arial-geo;
+
+        &-left {
+            .add__word {
+                margin-top: 7px;
+            }
+
+            span {
+                font-size: 15px;
+                color: #546D78;
+            }
+        }
+
+        &-right {
+            .x-icon {
+                margin-bottom: 7px;
+            }
+        }
+    }
+
+
+    .level-2,
+    .level-3 {
+        margin-top: 30px;
+
+        .radio-label {
+            justify-content: flex-end;
+            font-family: $arial-geo;
+
+            &::before {
+                width: 12px !important;
+                height: 12px !important;
+                box-shadow: inset 0 0 0 2px #fff !important;
+                margin-left: 4px !important;
+            }
+        }
+
+        .form-check {
+            display: inline-block;
+            vertical-align: middle;
+            margin-top: 17px;
+        }
+    }
+
+    .level__completed {
+        padding-left: 33px;
+    }
+
+
+
+    .level-3 {
+        margin-left: 33px;
+
+        .completed__level {
+            align-items: flex-start;
+        }
+
+        .level__completed {
+            margin-bottom: 60px;
         }
     }
 }
