--- a/scss/Modules/variable.scss
+++ b/scss/Modules/variable.scss
@@ -8,3 +8,4 @@ $color-gray-secondary: #768A92;
 $arial-geo: 'Arial GEO';
 $bpg-boxo: 'BPG Boxo';
 $bpg-nino-mtavruli: 'BPG Nino Mtavruli';
+$Agancxad: 'Agancxad';
