--- a/scss/pages/auth.scss
+++ b/scss/pages/auth.scss
@@ -4,6 +4,9 @@
 
 
 .myform {
+    font-family: $Agancxad;
+    padding: 0 28%;
+
     .form-control {
         border: 1px solid rgba(85, 110, 121, 0.3);
 
@@ -21,21 +24,35 @@
         margin-top: 15px;
         margin-bottom: 25px;
         display: block;
+        color: #3597EC;
     }
 
+    .btn-danger {
+        background: #DD6D7A;
+        margin: 0 auto;
+        display: block;
+        border-radius: 12px;
+        font-size: 15px;
+        padding: 10px 20px;
+        padding-bottom: 5px;
+    }
 
     label {
         font-size: 16px;
         color: #546D78;
         line-height: 28px;
-        font-family: $arial-geo;
     }
 }
 
 
 
+.register__title {
+    margin-bottom: 46px;
+}
 
-
+.register__btn {
+    margin-top: 21px;
+}
 
 
 .facebook__login {
@@ -45,6 +62,10 @@
     border-radius: 8px;
     color: #fff;
     margin-bottom: 40px;
-    margin-top: 72px;
+    margin-top: 40px;
     font-family: $arial-geo;
+
+    &:hover {
+        color: #fff;
+    }
 }
