--- a/scss/pages/main-page/search_word.scss
+++ b/scss/pages/main-page/search_word.scss
@@ -210,6 +210,8 @@
                   margin: 0 auto;
                   display: block;
                   font-size: 15px;
+                  padding: 0px 15px;
+                  padding-top: 4px;
                   background: $color-red-secondary;
                   border: 1px solid $color-red-secondary;
               }
