--- a/scss/pages/auth.scss
+++ b/scss/pages/auth.scss
@@ -54,6 +54,10 @@
     margin-top: 21px;
 }
 
+.reset-pass-con {
+    margin-top: 70px;
+    margin-bottom: 30px;
+}
 
 .facebook__login {
     background: #315D99;
