--- a/scss/pages/main-page/search_word.scss
+++ b/scss/pages/main-page/search_word.scss
@@ -73,7 +73,7 @@
     .correct__word {
         border-radius: 12px;
         box-shadow: 0px 0px 10px 0px rgba(84,109,120,0.3);
-        padding: 12px 16px 6px 26px;
+        padding: 12px 16px 25px 26px;
         margin-bottom: 11px;
 
         &:hover .correct__word-title {
@@ -151,6 +151,11 @@
                     width: 23px;
                     margin-bottom: 4px;
                 }
+            }
+
+            .more__info {
+                width: 28px;
+                height: 28px;
             }
         }
 
