--- a/scss/pages/auth.scss
+++ b/scss/pages/auth.scss
@@ -28,7 +28,7 @@
     }
 
     .btn-danger {
-        background: #DD6D7A;
+        background: $color-red-secondary;
         margin: 0 auto;
         display: block;
         border-radius: 12px;
