--- a/scss/pages/pages--import.scss
+++ b/scss/pages/pages--import.scss
@@ -3,3 +3,5 @@
 @import './main-page/search_word.scss';
 @import './addword/add-word.scss';
 @import './auth.scss';
+@import './userpage/userpage.scss';
+@import './my-words/my-words.scss';
