--- a/scss/pages/addword/add-word.scss
+++ b/scss/pages/addword/add-word.scss
@@ -110,6 +110,7 @@
             .x__edit__icon {
                 width: 25px;
                 height: 25px;
+                display: inline-block;
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
