--- a/scss/pages/header.scss
+++ b/scss/pages/header.scss
@@ -47,7 +47,7 @@
             content: '';
             position: absolute;
             bottom: -9px;
-            left: 0;
+            left: -125px;
             right: 0;
             height: 15px;
             background: transparent;
