--- a/scss/pages/pages--import.scss
+++ b/scss/pages/pages--import.scss
@@ -1,6 +1,6 @@
 @import 'header.scss';
 @import 'footer.scss';
-@import './main-page/search_word.scss';
+@import './main-page/man-page--import.scss';
 @import './addword/add-word.scss';
 @import './auth.scss';
 @import './userpage/userpage.scss';
