--- a/scss/Components/input_radio.scss
+++ b/scss/Components/input_radio.scss
@@ -12,7 +12,7 @@ $color2: #E03348;
     position: absolute;
     opacity: 0;
 
-    + .radio-label {
+    ~ .radio-label {
       &:before {
         content: '';
         border-radius: 100%;
@@ -29,7 +29,7 @@ $color2: #E03348;
       }
     }
     &:checked {
-      + .radio-label {
+      ~ .radio-label {
         &:before {
           background-color: $color2;
           box-shadow: inset 0 0 0 3px #fff;
@@ -38,7 +38,7 @@ $color2: #E03348;
       }
     }
     &:focus {
-      + .radio-label {
+      ~ .radio-label {
         &:before {
           outline: none;
           border-color: $color1;
@@ -46,7 +46,7 @@ $color2: #E03348;
       }
     }
     &:disabled {
-      + .radio-label {
+      ~ .radio-label {
         &:before {
           box-shadow: inset 0 0 0 4px $color1;
           border-color: darken($color1, 25%);
@@ -54,7 +54,7 @@ $color2: #E03348;
         }
       }
     }
-    + .radio-label {
+    ~ .radio-label {
       &:empty {
         &:before {
           margin-right: 0;
