--- a/scss/Modules/base.scss
+++ b/scss/Modules/base.scss
@@ -19,6 +19,10 @@ body {
     display: flex;
 }
 
+.flex-start {
+    justify-content: flex-start;
+}
+
 .justify-between {
     justify-content: space-between;
 }
