--- a/scss/pages/addword/add-word.scss
+++ b/scss/pages/addword/add-word.scss
@@ -3,6 +3,10 @@
     padding-top: 60px;
 }
 
+.ajaxList .word__wrapper.word__container {
+    padding-bottom: 0;
+}
+
 .word__wrapper {
     margin: 0 auto;
 
