--- a/scss/pages/addword/add-word.scss
+++ b/scss/pages/addword/add-word.scss
@@ -3,8 +3,8 @@
     padding-top: 60px;
 }
 
-.ajaxList .word__wrapper.word__container {
-    padding-bottom: 0;
+#ajaxList .word__wrapper.word__container {
+    padding-bottom: 0 !important;
 }
 
 .word__wrapper {
