--- a/scss/pages/addword/add-word.scss
+++ b/scss/pages/addword/add-word.scss
@@ -23,7 +23,7 @@
             margin-top: 60px;
         }
 
-        .checkbox {
+        .radio-label {
             justify-content: flex-end !important;
             margin-top: 10px;
         }
