--- a/scss/pages/addword/add-word.scss
+++ b/scss/pages/addword/add-word.scss
@@ -20,7 +20,7 @@
 
     .level-1 {
         .level__btn {
-            margin-top: 60px;
+            margin-top: 50px;
         }
 
         .radio-label {
@@ -50,7 +50,7 @@
         }
 
         .level__btn {
-            margin-top: 40px;
+            margin-top: 30px;
         }
     }
 
@@ -77,7 +77,15 @@
             display: block;
             padding: 0px 22px;
             padding-top: 4px;
-            margin: 0 auto;
+        }
+
+        &__mybtns {
+            display: flex;
+            justify-content: center;
+
+            button:nth-child(1){
+                margin-right: 20px;
+            }
         }
     }
 
