--- a/scss/Components/az.scss
+++ b/scss/Components/az.scss
@@ -9,14 +9,26 @@
     padding-bottom: 20px;
     margin-bottom: 50px;
 
+    input {
+        display: none;
+    }
+
     label {
         padding: 2px 6px;
+
+        &.active {
+            .hr {
+                display: block;
+            }
+        }
     }
     
     .hr {
-        width: 12px;
+        width: 15px;
         height: 2px;
+        margin-top: 5px;
         background: $color-red;
+        display: none;
     }
 }
 
