--- a/scss/Modules/base.scss
+++ b/scss/Modules/base.scss
@@ -20,7 +20,7 @@ body {
 }
 
 .flex-start {
-    justify-content: flex-start;
+    justify-content: flex-start !important;
 }
 
 .justify-between {
@@ -32,7 +32,7 @@ body {
 }
 
 .flex-end {
-    justify-content: flex-end;
+    justify-content: flex-end !important;
 }
 
 .justify-around {
