--- a/scss/Modules/base.scss
+++ b/scss/Modules/base.scss
@@ -35,6 +35,10 @@ body {
     justify-content: flex-end !important;
 }
 
+.justify-content {
+    justify-content: center;
+}
+
 .justify-around {
     justify-content: space-around;
 }
