--- a/scss/pages/addword/add-word.scss
+++ b/scss/pages/addword/add-word.scss
@@ -1,5 +1,5 @@
 .word__wrapper.word__container {
-    max-width: 540px;
+    max-width: 600px;
     padding-top: 60px;
 }
 
@@ -59,6 +59,7 @@
 
     .level {
         margin-top: 27px;
+        padding-left: 48px;
 
         &__input {
             border: 1px solid rgba(85, 110, 121, 0.3);
@@ -97,8 +98,8 @@
 
 
     .completed__level {
+        position: relative;
         border-radius: 10px;
-        overflow: hidden;
         background: rgba(222, 222, 222, 0.3);
         padding: 5px 7px 5px 11px;
         margin-top: 10px;
@@ -199,4 +200,44 @@
 
 #ajaxList .word__wrapper.word__container {
     padding-bottom: 0 !important;
+}
+
+
+.isActive {
+    position: absolute;
+    left: -67px;
+    top: 53%;
+    transform: translateY(-50%);
+
+    &__child {
+        border-left: 3px solid #DD6D7A;
+        border-right: 3px solid #DD6D7A;
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        width: 36px;
+        display: flex;
+        justify-content: center;
+        padding: 5px 0;
+    
+        &.isActive__child {
+            border-left: 3px solid #367FBF;
+            border-right: 3px solid #367FBF;
+        }
+    
+        button {
+            background: transparent;
+    
+            &:nth-child(2){
+                margin-top: 5px;
+            }
+        }
+    }
+
+}
+
+
+.level__completed {
+    position: relative;
+    display: flex;
+    align-items: center;
 }
